--- a/views/index.html
+++ b/views/index.html
@@ -5,10 +5,31 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Schillinger Assignment 1</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <h1>Assignment 1</h1>
-    <a href="/AddToList.html">Add-to-List</a>
+    <h1>Gavin Schillinger</h1>
+    <img src="images/magik.png" alt="Gamer Gavin">
+    <h2>Cool Things That Are Cool</h2>
+    <ol type="1">
+        <li>League of Legends</li>
+        <li>Supernatural</li>
+        <li>YuGiOh</li>
+        <li>Magic the Gathering</li>
+        <li>Pokemon</li>
+        <li>John Wick</li>
+        <li>Arrow</li>
+        <li>Anime</li>
+        <li>Playing Guitar</li>
+        <li>Sandwiches in general (kinda hard to go wrong with em)</li>
+    </ol>
     <br>
+    <div>
+        This is just a cool list of a few cool things that I think are cool.
+    </div>
+    <br>
+    <a href="/Login.html">Login</a>
+    <br>
+    <a href="/haha.html">Rock and Rollll, babyyyy</a>
 </body>
 </html>
